@@ -1,3 +1,6 @@
+2012-09-13 Aurelien GRAYO <aurelien@in-cite.net>
+	* Feature: Wrapped sorts into span tag and associated sorts label.
+
 2012-06-21 Aurelien GRAYO <aurelien@in-cite.net>
 	* Change extension owner to Plan.Net
 	* Publication to the TER
